# rest-api-wrapper

./: LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: UnitTests.yml
lansknet-api-wrapper/: LansknetAPI.py  test.py
lansknet_api_wrapper/: LansknetAPI.py  __init__.py  test.py
