[project]
name = "lansknet-api-wrapper"
version = "0.0.1"
description = "This is a wrapper for the Lansknet API."
readme = "README.md"
license = { file = "LICENSE.txt" }
authors = [{ name = "Arthur Vasseur", email = "arthur.vasseur@epitech.eu" }]

# Exemple de dépendances
dependencies = ["requests", "httpx"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
